# brainjam

./: .gitignore  Changelog  Design.txt  Help.txt  MANIFEST  Makefile  README  TODO  brainjam.6  brainjam.c  brainjam.rb.in  cfg.mk.in  commands.h  config.mk  configure  configure.ac  depend.sh  gen.c  mkdists.sh  module.mk  settings.c  settings.h  types.h  ui.c
configs/: configs.c  configs.txt  mkconfigs.py  module.mk
curses/: curses.c  curses.h  game.c  help.c  list.c  module.mk  stub.c
dists/: MANIFEST  Makefile  install.nsi  installer.nsi  mkdist.sh
files/: files.c  internal.h  module.mk  sessionio.c  solutionio.c
game/: game.c  module.mk  play.c
redo/: module.mk  redo.c
sdl/: button.h  game.c  getfont.c  getfont.h  help.c  images.c  images.h  internal.h  list.c  module.mk  resource.h  scroll.c  sdl.c  sdl.h  zrwops.c  zrwops.h
sdl/sprites/: layout.txt  mkimage.py  module.mk
solutions/: solutions.c  solutions.h
src/: Makefile  brainjam.6  brainjam.c  commands.h  decks.c  decks.h  decls.h  depend.sh  gen.c  gen.h  glyphs.h  incbin.h  mainloop.c  mainloop.h  module.mk  settings.c  settings.h  types.h  ui.c  ui.h
src/answers/: answers.c  answers.h  module.mk  select.c
src/configs/: configs.c  configs.h  mkconfigs.py  module.mk  resource.S  resource.h
src/curses/: curses.c  game.c  help.c  internal.h  list.c  module.mk  stub.c
src/cursesui/: cursesui.c  cursesui.h  game.c  help.c  internal.h  list.c  module.mk  stub.c
src/files/: answers.c  files.c  files.h  init.c  internal.h  module.mk  rcio.c  session.c  sessionio.c  solutionio.c
src/game/: game.c  game.h  internal.h  module.mk  play.c  state.c  validate.c
src/gamedata/: Makefile  gamedata.txt  mkgames.c  mkgames.py  module.mk
src/redo/: redo.c  redo.h
src/sdl/: abmp.py  alertids.h  biconids.h  biconpos.h  button.c  button.h  font.c  font.h  game.c  getfont.c  getpng.c  getpng.h  help.c  imageids.h  images.c  images.h  internal.h  labelpos.h  layout.h  list.c  module.mk  resource.S  resource.h  scroll.c  scroll.h  sdl.c  sdltypes.h  stub.c  zrwops.c  zrwops.h
src/sdl/sprites/: alerts.txt  bicons.txt  labels.txt  layout.txt  mkimage.py  module.mk
src/sdlui/: alertpos.h  button.c  button.h  font.c  font.h  game.c  getpng.c  getpng.h  help.c  image.c  image.h  internal.h  labelids.h  list.c  module.mk  scroll.c  scroll.h  sdltypes.h  sdlui.c  sdlui.h  stub.c
src/sdlui/gfx/: alerts.txt  labels.txt  module.mk
src/solutions/: module.mk  select.c  solutions.c  solutions.h
src/test/: Makefile  chklogic.c  chkredo.c
src/windows/: HOWTO.txt  appres.rc  cross-build.sh  utf8.xml  windows.mk
